--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -31,6 +31,11 @@
     <%= f.number_field :user_id %>
   </div>
 
+  <div class="field">
+    <%= f.label :price %>
+    <%= f.text_field :price %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
