--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,6 +16,11 @@
 </p>
 
 <p>
+  <strong>Price:</strong>
+  <%= @post.price %>
+</p>
+
+<p>
   <strong>User:</strong>
   <%= @post.user_id %>
 </p>
