--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,11 +12,6 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %>
-    <%= f.text_field :password %>
-  </div>
-
-  <div class="field">
     <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
@@ -29,6 +24,16 @@
   <div class="field">
     <%= f.label :lastname %>
     <%= f.text_field :lastname %>
+  </div>
+
+  <div class="field">
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+  </div>
+
+  <div class="field">
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
   </div>
 
   <div class="actions">
