Safer input fields

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
     <%= f.label :password %>
-    <%= f.text_field :password %>
+    <%= f.password_field :password %>
   </div>
 
   <div class="field">
     <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.email_field :email %>
   </div>
 
   <div class="field">
