--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,34 +1,3 @@
 <h1>Signup for State Rooms</h1>
 
-<% if @user.errors.any? %>
-<ul>
-  <% @user.errors.full_messages.each do |msg| %>
-  <li><%= msg %></li>
-  <% end %>
-</ul>
-<% end %>
-
-<%= form_for @user do |f| %>
-  <p>
-    <%= f.label :firstname %>
-    <%= f.text_field :firstname %>
-  </p>
-
-  <p>
-    <%= f.label :lastname %>
-    <%= f.text_field :lastname %>
-  </p>
-
-  <p>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </p>
-
-  <p>
-    <%= f.label :password %>
-    <%= f.text_field :password %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'form' %>
