--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-
+    <%= render 'layouts/navigation' %>
     <% flash.each do |name, msg| %>
     <ul>
       <li> <%= msg %></li>
