--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,1 +1,3 @@
-<%= link_to "Log out", logout_path, method: :delete %>
+<% if session[:user_id] %>
+  <%= link_to "Log out", logout_path, method: :delete %>
+<% end %>
