Basic listing functionality

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,3 +1,6 @@
 <% if session[:user_id] %>
   <%= link_to "Log out", logout_path, method: :delete %>
+  <%= link_to "Create listing", 'new' %>
+<% else %>
+  <%= link_to "Log in", login_path %>
 <% end %>
