more navigation functionality for listings

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,4 +3,6 @@
   <%= link_to "Create listing", 'new' %>
 <% else %>
   <%= link_to "Log in", login_path %>
+  <%= link_to "Sign up", signup_path %>
 <% end %>
+<%= link_to "All listings", listings_path %>
