Basic keyword search (only thing that works so far)

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,4 +5,4 @@
   <%= link_to "Log in", login_path %>
   <%= link_to "Sign up", signup_path %>
 <% end %>
-<%= link_to "All listings", listings_path %>
+<%= link_to "Listings", listings_path %>
