--- a/app/views/listings/_search_form.html.erb
+++ b/app/views/listings/_search_form.html.erb
@@ -5,5 +5,5 @@
 <% if @listings.present? %>
   <%= render 'listings_table' %>
 <% else %>
-  <p>No results found for <%= params[:search] %>.</p>
+  <p>No results found for <b><%= params[:search] %></b>.</p>
 <% end %>
