--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,9 @@
       <li> <%= msg %></li>
     </ul>
     <% end %>
-    <%= yield %>
+    
+    <div class = "container">
+      <%= yield %>
+    </div>
   </body>
 </html>
