--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,11 @@
       <li> <%= msg %></li>
     </ul>
     <% end %>
-    
+
     <div class = "container">
       <%= yield %>
     </div>
+
+    <%= render 'layouts/footer' %>
   </body>
 </html>
