--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <div class="center jumbotron">
   <h1>STATE ROOMS</h1>
-  <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg " %>
+  <%= link_to "Sign up now", signup_path, class: "btn btn-primary btn-lg " %>
+  <%= link_to "Log in", login_path, class: "btn btn-primary btn-lg " %>
 </div>
