fixed user update/signup form

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,7 +33,7 @@ $navbar-default-bg: #ff6e00;
   background-image: asset-url('dormroom.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  height: 500px
+  height: 500px;
 }
 
 .jumbotron h1 {
