styled error messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,7 @@
 
   <body>
     <%= render 'layouts/navigation' %>
-    <% flash.each do |name, msg| %>
-    <ul>
-      <li> <%= msg %></li>
-    </ul>
-    <% end %>
+    <%= render 'layouts/messages' %>
 
     <div class = "container">
       <%= yield %>
