styled error messages for listings

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,10 +1,4 @@
-<% if @listing.errors.any? %>
-<ul>
-  <% @listing.errors.full_messages.each do |msg| %>
-  <li><%= msg %></li>
-  <% end %>
-</ul>
-<% end %>
+<%= render 'shared/errors' %>
 
 <%= form_for @listing, url: listings_path do |f| %>
   <table>
