added user related listings to profile page

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -43,9 +43,9 @@
           </ul>
         </li>
       </ul>
-      
+
       <ul class="nav navbar-nav navbar-right">
-        <% if session[:user_id] %>
+        <% if logged_in? %>
         <li><%= link_to "Log out", logout_path, method: :delete %></li>
         <% else %>
         <li><%= link_to "Log in", login_path %></li>
