--- a/app/views/listings/_listings_table.html.erb
+++ b/app/views/listings/_listings_table.html.erb
@@ -7,8 +7,8 @@
     <th>Creator</th>
     <th>Time Created</th>
   </tr>
-  
-  <% @listings.each do |listing| %>
+
+  <% obj.each do |listing| %>
     <tr>
       <td><%= link_to("#{listing.title}", listing_path(listing.id)) %></td>
       <td><%= listing.address %></td>
