--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,4 +1,4 @@
-<h1> Listing: <%= "#{@listing.title}" %></h1>
+<h1><%= "#{@listing.title}" %></h1>
 <br>
   Created by <%= @listing.user.firstname %> <%= @listing.user.lastname %>, <%= @listing.user.email %>
 
