start of messaging stuff; Rails keeps assuming I mean things I don't but this is the closest thing I've had to something that works. I'll get back to the advanced search.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,4 +13,8 @@
   email: <%= @user.email %>
 </p>
 
+<% if session[:user_id] == @user.id %>
+  <%= button_to "Edit info", edit_user_path(id: session[:user_id]) %>
+<% end %>
+
 <%= render 'listings/listings_table', obj: @user.listings %>
