Messages work except for sending

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -47,7 +47,7 @@
 
         </div>
         <div class = 'control-label col-sm-2'>
-          <button type="button" class="form-control btn btn-default">Chose File</button>
+          <button type="button" class="form-control btn btn-default">Choose File</button>
         </div>
       </div>
 
