--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -27,9 +27,11 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><%= link_to "Listings", listings_path %></li>
-      </ul>
+      <% if logged_in? %>
+        <ul class="nav navbar-nav">
+          <li><%= link_to "Listings", listings_path %></li>
+        </ul>
+      <% end %>
 
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
@@ -45,7 +47,8 @@
           </ul>
         </li>
         <% else %>
-        <li><%= link_to "Log in", login_path %></li>
+          <li><%= link_to "Log in", login_path %></li>
+          <li><%= link_to "Sign up", signup_path %></li>
         <%end %>
       </ul>
     </div><!-- /.navbar-collapse -->
