--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
 </p>
 
 <% if session[:user_id] == @user.id %>
-  <%= button_to "Edit info", edit_user_path(id: session[:user_id]) %>
+  <p><%= button_to "Edit info", edit_user_path(id: session[:user_id]) %></p>
 <% end %>
 
 <%= render 'listings/listings_table', obj: @user.listings %>
