--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -44,18 +44,19 @@
           <%= f.label("Images: (minimum 1 image)") %>
         </div>
         <div class = 'control-label col-sm-6'>
-
         </div>
         <div class = 'control-label col-sm-2'>
-          <button type="button" class="form-control btn btn-default">Choose File</button>
+          <span class="form-control btn btn-default">
+            <%= f.file_field :cover %>
+          </span>
         </div>
       </div>
 
       <div class = 'form-group'>
         <div class = 'col-sm-offset-2 col-sm-10'>
-        <%= f.submit(@listing.new_record? ? "Create listing" : "Update listing", class: 'btn btn-primary btn-lg')%>
+          <%= f.submit(@listing.new_record? ? "Create listing" : "Update listing", class: 'btn btn-primary btn-lg')%>
+        </div>
       </div>
-    </div>
     <% end %>
   </div>
 </div>
