--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Messages</h1>
+<h1 align = "center">Messages</h1>
 
 <% if session[:user_id] %>
   <%= button_to("New message", messages_new_path) %>
