--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1> welcome to <%= "#{@user.firstname} #{@user.lastname}" %>'s page</h1>
+<h3 align = "center"> welcome to <%= "#{@user.firstname} #{@user.lastname}" %>'s page</h3>
 
 <%= gravatar_for @user %>
 <p>
